Fixing spacing of headers, subheaders, and paragraphs

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -31,6 +31,13 @@
   }
 
   p {
-    padding: 8px 32px;
+    padding: 0px 32px 4px 32px;
+  }
+  h2 {
+    padding: 24px 16px 8px 16px;
+  }
+  h4{
+    padding: 0px 32px;
+    margin-bottom: 5px;
   }
 }
